# Oxid-8

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: index.html
docs/pkg/: oxid8_wgpu.d.ts  oxid8_wgpu.js  oxid8_wgpu_bg.wasm.d.ts  package.json
oxid8/: Cargo.toml
oxid8-core/: Cargo.toml  README.md
oxid8-core/src/: lib.rs  screen.rs
oxid8-kitty/: Cargo.toml
oxid8-kitty/src/: lib.rs  main.rs
oxid8-kitty/src/screens/: mod.rs
oxid8-wasm/: Cargo.toml  fragment.js  index.html  main.js  vertex.js
oxid8-wasm/.cargo/: config.toml
oxid8-wasm/src/: lib.rs
oxid8-wgpu/: Cargo.toml  index.html
oxid8-wgpu/assets/: index.css
oxid8-wgpu/src/: app.rs  event.rs  geometry.rs  lib.rs  main.rs  shader.wgsl  texture.rs  wgpu_context.rs
oxid8/src/: main.rs
oxid8/src/screens/: game.rs
src/: app.rs  core.rs  lib.rs  main.rs  oxidate.rs
src/screens/: debug.rs  game.rs  menu.rs
src/screens/widgets/: renderer.rs  title.rs
