[package]
name = "oxid8-wgpu"
version = "0.1.0"
edition = "2024"
authors = ["Ethan Dibble <edibble@pdx.edu>"]
description = "WASM bindings for oxid8-core."
repository = "https://github.com/edibblepdx/Oxid-8"
license = "MIT"

[workspace]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# oxid8-core = { path = "../oxid8-core"}
anyhow = "1.0.98"
winit = "0.30.11"
env_logger = "0.11"
log = "0.4.27"
wgpu = "26.0.1"
pollster = "0.4.0"
cfg-if = "1.0.1"
clap = "4.5.41"

[dependencies.bytemuck]
version = "1.23.1"
features = [ "derive" ]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "Element",
]}
